added socket.io boilerplate

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,5 +8,9 @@
 	</head>
 	<body>
 		<h1>Chat App</h1>
+
+		<!-- Client-side socket.io library  -->
+		<script src="/socket.io/socket.io.js"></script>
+		<script src="JS/chat.js"></script>
 	</body>
 </html>
