--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<h1>Chat App</h1>
-
+		<button id="increment">Update Count</button>
+		<h2 id="message"></h2>
 		<!-- Client-side socket.io library  -->
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="JS/chat.js"></script>
