Added event Acknowledgements

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -42,6 +42,15 @@
 					</button>
 				</form>
 			</div>
+			<div class="location-btn">
+				<button
+					type="submit"
+					class="btn btn-primary mb-2"
+					id="send-location"
+				>
+					Send Location
+				</button>
+			</div>
 		</div>
 
 		<!-- Optional JavaScript -->
